--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
+        "nesbot/carbon": "^2.49",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
